--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button class="arrow left" onclick="move('left')"><img src="./assets/arrow.gif" alt="Left" /></button>
             </div>
             <div class="narration">
-                <p id="narrative-text">Você está em uma floresta encantada.</p>
+                <p id="narrative-text">Você está em uma Floresta.</p>
             </div>
         </div>
 
